WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47227
[chromium] Minor naming cleanup in WebDragData, part 2
https://bugs.webkit.org/show_bug.cgi?id=47227
Summary
[chromium] Minor naming cleanup in WebDragData, part 2
Daniel Cheng
Reported
2010-10-05 16:07:08 PDT
Now that Chromium uses the new renamed methods, delete the old deprecated methods.
Attachments
Patch
(5.46 KB, patch)
2010-10-05 16:09 PDT
,
Daniel Cheng
tony
: review+
tony
: commit-queue-
Details
Formatted Diff
Diff
Patch
(5.47 KB, patch)
2010-10-07 12:59 PDT
,
Daniel Cheng
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Cheng
Comment 1
2010-10-05 16:09:22 PDT
Created
attachment 69861
[details]
Patch
Tony Chang
Comment 2
2010-10-05 16:13:50 PDT
Comment on
attachment 69861
[details]
Patch LGTM, but I will hold off on the r+ cq+ while the EWS bot tries the patch.
Tony Chang
Comment 3
2010-10-06 09:25:00 PDT
Not sure why the ews bot didn't compile this on cr-linux overnight. Anyway, I'm going to land manually for dcheng.
Tony Chang
Comment 4
2010-10-06 09:25:56 PDT
Oh, nothing is building on cr-linux:
http://webkit-commit-queue.appspot.com/queue-status/chromium-ews
Tony Chang
Comment 5
2010-10-06 09:46:40 PDT
Meh, the bug reference in the ChangeLog was wrong so
bug 46937
got updated instead.
http://trac.webkit.org/changeset/69202
Tony Chang
Comment 6
2010-10-06 10:15:19 PDT
Rolled out in
r69207
. Reopening. webkit/tools/test_shell/event_sending_controller.cc: In member function ‘void EventSendingController::beginDragWithFiles(const CppArgumentList&, CppVariant*)’: webkit/tools/test_shell/event_sending_controller.cc:815:error: ‘class WebKit::WebDragData’ has no member named ‘appendToFileNames’ make: *** [out/Release/obj.target/test_shell_common/webkit/tools/test_shell/event_sending_controller.o] Error 1 webkit/tools/test_shell/test_webview_delegate.cc: In function ‘void<unnamed>::AddDRTFakeFileToDataObject(WebKit::WebDragData*)’: webkit/tools/test_shell/test_webview_delegate.cc:180:error: ‘class WebKit::WebDragData’ has no member named ‘appendToFileNames’ make: *** [out/Release/obj.target/test_shell_common/webkit/tools/test_shell/test_webview_delegate.o] Error 1
Daniel Cheng
Comment 7
2010-10-07 12:59:38 PDT
Created
attachment 70137
[details]
Patch Another patch checked into Chrome, and once again, it built locally. Hopefully it actually works this time. (I updated the bug URL in the ChangeLogs as well)
WebKit Commit Bot
Comment 8
2010-10-07 15:04:32 PDT
Comment on
attachment 70137
[details]
Patch Clearing flags on attachment: 70137 Committed
r69346
: <
http://trac.webkit.org/changeset/69346
>
WebKit Commit Bot
Comment 9
2010-10-07 15:04:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug