2010-10-07  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Tony Chang.

        [chromium] Minor naming cleanup in WebDragData, part 2
        https://bugs.webkit.org/show_bug.cgi?id=47227

        Chromium no longer uses the deprecated methods, so delete them.

        * DEPS:
        * public/WebDragData.h:
        * src/WebDragData.cpp:
2010-10-07  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Minor naming cleanup in WebDragData, part 2
        https://bugs.webkit.org/show_bug.cgi?id=47227

        Update DRT to use the renamed methods.

        * DumpRenderTree/chromium/EventSender.cpp:
        (EventSender::beginDragWithFiles):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (addDRTFakeFileToDataObject):

Canonical link: https://commits.webkit.org/59947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69346 268f45cc-cd09-0410-ab3c-d52691b4dbfc